# Sistema-de-Control-de-Vuelo-FCS

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
include/control/: ComplementaryFilter.hpp  FlightStateMachine.hpp  PidController.hpp
include/math/: Vector3D.hpp
src/: main_sim.cpp
src/control/: FlightStateMachine.cpp
src/math/: Vector3D.cpp
test/: CMakeLists.txt  test_fsm.cpp  test_pid.cpp  test_vector3d.cpp
